--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <h4> piano</h4>
             <img src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png"/>
-
+<p> happy</p>
 
         </main>
         <footer>
